# pipecat-client-cxx

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPipecat.cmake  FindRTVI.cmake
examples/c++/: CMakeLists.txt  README.md
examples/c++-portaudio/: CMakeLists.txt  README.md
examples/c++-portaudio/src/: daily_bots_audio.cpp
examples/c++/src/: daily_bots_example.cpp
examples/server/: README.md
include/: daily_bots.h  daily_bots_transport.h  rtvi.h  rtvi_callbacks.h  rtvi_client.h  rtvi_exceptions.h  rtvi_helper.h  rtvi_llm_helper.h  rtvi_messages.h  rtvi_transport.h  rtvi_utils.h
src/: daily_bots_transport.cpp  rtvi_client.cpp  rtvi_llm_helper.cpp  rtvi_utils.cpp
